--- a/assignment_5_1_starter/prompt.ipynb
+++ b/assignment_5_1_starter/prompt.ipynb
@@ -618,7 +618,7 @@
    ],
    "source": [
     "# print(bar_data['occupation'].unique())\n",
-    "bar_low_rate = bar_data[(bar_data['Bar'] == 'never') | \n",
+    "bar_low_frequency = bar_data[(bar_data['Bar'] == 'never') | \n",
     "                        (bar_data['Bar'] == 'less1') | \n",
     "                        (bar_data['Bar'] == '1~3')]['Y'].mean()\n",
     "\n",
