--- a/bankmarketing/prompt_III.ipynb
+++ b/bankmarketing/prompt_III.ipynb
@@ -414,11 +414,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Objective**: To effectively predict whether a client will subscribe to a term deposit (a fixed-term investment) at a bank.\n",
+    "**Objective**: To effectively predict whether a client will subscribe to a term deposit at a bank.\n",
     "\n",
     "**Significance**:\n",
-    "- **For the Bank**: Understanding and predicting client behavior towards term deposit subscriptions can help in effectively targeting marketing strategies, optimizing resource allocation, and ultimately increasing the success rate of the bank’s marketing campaigns.\n",
-    "- **For the Clients**: Tailored marketing ensures that clients receive offers that are more likely to align with their needs and financial goals.\n",
+    "- **For the Bank**: The bank wants to understand and predict client behavior towards subscriptions by insights from effective target marketing strategies and in turn increase the success rate of the bank’s marketing campaigns.\n",
+    "- **For the Clients**: The clients want a more customized marketing experience catered to themselves. This ensures that clients receive offers that are more likely to align with their needs and financial goals.\n",
     "\n",
     "In summary, the business objective is to leverage the data to build a predictive model that can identify potential clients who are more likely to subscribe to a term deposit. this helps the bank in making data-driven decisions for its marketing campaigns."
    ]
